Closed
Bug 1932828
Opened 19 days ago
Closed 18 days ago
Perma Linux run build PROCESS-CRASH | None [@ mozilla::Maybe<mozilla::LogicalSize>::isNothing] | Profile initialization
Categories
(Core :: Layout: Flexbox, defect)
Core
Layout: Flexbox
Tracking
()
RESOLVED
FIXED
134 Branch
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox132 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
(Regression)
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: amarc [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=483754407&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/GS8ddMK-RpC5wVW7oWD-_g/runs/0/artifacts/public/logs/live_backing.log
[task 2024-11-22T10:24:02.147Z]
[task 2024-11-22T10:24:02.147Z] # Move our fetched firefox into objdir/dist so the jarlog entries will match
[task 2024-11-22T10:24:02.147Z] # the paths when the final PGO stage packages the build.
[task 2024-11-22T10:24:02.147Z] mkdir -p $PGO_RUNDIR
[task 2024-11-22T10:24:02.147Z] + mkdir -p obj-firefox/dist
[task 2024-11-22T10:24:02.148Z] mkdir -p $UPLOAD_PATH
[task 2024-11-22T10:24:02.148Z] + mkdir -p /builds/worker/artifacts
[task 2024-11-22T10:24:02.149Z] mv $MOZ_FETCHES_DIR/firefox $PGO_RUNDIR
[task 2024-11-22T10:24:02.149Z] + mv /builds/worker/fetches/firefox obj-firefox/dist
[task 2024-11-22T10:24:02.594Z] ./mach python build/pgo/profileserver.py --binary $PGO_RUNDIR/firefox/firefox
[task 2024-11-22T10:24:02.594Z] + ./mach python build/pgo/profileserver.py --binary obj-firefox/dist/firefox/firefox
[task 2024-11-22T10:24:25.068Z] mozcrash INFO | Copy/paste: /builds/worker/fetches/minidump-stackwalk/minidump-stackwalk --symbols-url=https://symbols.mozilla.org/ --cyborg=/tmp/tmp09t5yk5f/5e94d17a-b13b-0a70-b451-cf1c713c191c.trace /tmp/tmpavxbcjs6/minidumps/5e94d17a-b13b-0a70-b451-cf1c713c191c.dmp /builds/worker/fetches
[task 2024-11-22T10:24:32.018Z] mozcrash INFO | Saved minidump as /builds/worker/artifacts/5e94d17a-b13b-0a70-b451-cf1c713c191c.dmp
[task 2024-11-22T10:24:32.018Z] mozcrash INFO | Saved app info as /builds/worker/artifacts/5e94d17a-b13b-0a70-b451-cf1c713c191c.extra
[task 2024-11-22T10:24:32.018Z] started SP3 server on port 8000
[task 2024-11-22T10:24:32.018Z] Firefox exited with code 11 during profile initialization
[task 2024-11-22T10:24:32.018Z] Firefox output (/builds/worker/artifacts/profile-run-1.log):
[task 2024-11-22T10:24:32.018Z] console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.sys.mjs", 441))
[task 2024-11-22T10:24:32.018Z] console.warn: services.settings: #fetchAttachment: Forcing fallbackToDump to false due to Utils.LOAD_DUMPS being false
[task 2024-11-22T10:24:32.018Z] console.warn: services.settings: #fetchAttachment: Forcing fallbackToDump to false due to Utils.LOAD_DUMPS being false
[task 2024-11-22T10:24:32.018Z] [GFX1-]: glxtest: libpci missing
[task 2024-11-22T10:24:32.018Z] [GFX1-]: glxtest: libEGL missing
[task 2024-11-22T10:24:32.018Z] [GFX1-]: glxtest: libGL.so.1 missing
[task 2024-11-22T10:24:32.018Z] [GFX1-]: No GPUs detected via PCI
[task 2024-11-22T10:24:32.018Z]
[task 2024-11-22T10:24:32.018Z] console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.sys.mjs", 441))
[task 2024-11-22T10:24:32.018Z] console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.sys.mjs", 441))
[task 2024-11-22T10:24:32.018Z] console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.sys.mjs", 441))
[task 2024-11-22T10:24:32.018Z] console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.sys.mjs", 441))
[task 2024-11-22T10:24:32.018Z] [GFX1-]: Failed GL context creation for WebRender: 0
[task 2024-11-22T10:24:32.018Z] [GFX1-]: FEATURE_FAILURE_WEBRENDER_INITIALIZE_UNSPECIFIED
[task 2024-11-22T10:24:32.018Z] [GFX1-]: Failed to connect WebRenderBridgeChild. isParent=true
[task 2024-11-22T10:24:32.018Z] [GFX1-]: Fallback WR to SW-WR
[task 2024-11-22T10:24:32.018Z] ExceptionHandler::GenerateDump attempting to generate:/tmp/tmpavxbcjs6/minidumps/5e94d17a-b13b-0a70-b451-cf1c713c191c.dmp
[task 2024-11-22T10:24:32.018Z] ExceptionHandler::GenerateDump cloned child 364
[task 2024-11-22T10:24:32.018Z] ExceptionHandler::SendContinueSignalToChild sent continue signal to child
[task 2024-11-22T10:24:32.018Z] ExceptionHandler::WaitForContinueSignal waiting for continue signal...
[task 2024-11-22T10:24:32.018Z] ExceptionHandler::GenerateDump minidump generation succeeded
[task 2024-11-22T10:24:32.019Z] Exiting due to channel error.
[task 2024-11-22T10:24:32.019Z] Exiting due to channel error.
[task 2024-11-22T10:24:32.019Z]
[task 2024-11-22T10:24:32.019Z] mozcrash checking /tmp/tmpavxbcjs6/minidumps for minidumps...
[task 2024-11-22T10:24:32.019Z] PROCESS-CRASH | None [@ mozilla::Maybe<mozilla::LogicalSize>::isNothing] | Profile initialization
[task 2024-11-22T10:24:32.019Z] Crash dump filename: /tmp/tmpavxbcjs6/minidumps/5e94d17a-b13b-0a70-b451-cf1c713c191c.dmp
[task 2024-11-22T10:24:32.019Z] Process type: main
[task 2024-11-22T10:24:32.019Z] Process pid: 131
[task 2024-11-22T10:24:32.019Z] Operating system: Linux
[task 2024-11-22T10:24:32.019Z] 5.4.0-1106-gcp #115~18.04.1-Ubuntu SMP Mon May 22 20:46:39 UTC 2023
[task 2024-11-22T10:24:32.019Z] CPU: x86
[task 2024-11-22T10:24:32.019Z] GenuineIntel family 6 model 85 stepping 7
[task 2024-11-22T10:24:32.019Z] 16 CPUs
[task 2024-11-22T10:24:32.019Z] Linux Ubuntu 18.04 - bionic (Ubuntu 18.04.6 LTS)
[task 2024-11-22T10:24:32.019Z]
[task 2024-11-22T10:24:32.019Z] Crash reason: SIGSEGV / SEGV_MAPERR
[task 2024-11-22T10:24:32.019Z] Crash address: 0x2e758c98
[task 2024-11-22T10:24:32.019Z] Process uptime: not available
[task 2024-11-22T10:24:32.019Z]
[task 2024-11-22T10:24:32.019Z] Thread 0 firefox-bin (crashed)
[task 2024-11-22T10:24:32.019Z] 0 libxul.so!mozilla::Maybe<mozilla::LogicalSize>::isNothing() const [Maybe.h:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 474]
[task 2024-11-22T10:24:32.019Z] Found by: inlining
[task 2024-11-22T10:24:32.019Z] 1 libxul.so!mozilla::operator==<mozilla::LogicalSize>(mozilla::Maybe<mozilla::LogicalSize> const&, mozilla::Maybe<mozilla::LogicalSize> const&) [Maybe.h:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 1064]
[task 2024-11-22T10:24:32.019Z] Found by: inlining
[task 2024-11-22T10:24:32.019Z] 2 libxul.so!mozilla::IntrinsicISizesCache::Get(bool, mozilla::IntrinsicISizeType, mozilla::IntrinsicSizeInput const&) const [IntrinsicISizesCache.h:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 72 + 0x13]
[task 2024-11-22T10:24:32.019Z] eip = 0xe7857196 esp = 0xffe2bc30 ebp = 0xffe2bc48 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0x2e758c80 edi = 0xffe2bd68 eax = 0xed4dcaf8 ecx = 0xee5dfc58
[task 2024-11-22T10:24:32.019Z] edx = 0x00009b6f eflags = 0x00010246
[task 2024-11-22T10:24:32.019Z] Found by: given as instruction pointer in context
[task 2024-11-22T10:24:32.019Z] 3 libxul.so!mozilla::IntrinsicISizesCache::GetOrSet<nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType)::$_0>(nsIFrame&, mozilla::IntrinsicISizeType, mozilla::IntrinsicSizeInput const&, nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType)::$_0) [IntrinsicISizesCache.h:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 33]
[task 2024-11-22T10:24:32.019Z] Found by: inlining
[task 2024-11-22T10:24:32.019Z] 4 libxul.so!nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) [nsFlexContainerFrame.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 6560 + 0x15]
[task 2024-11-22T10:24:32.019Z] eip = 0xe791c244 esp = 0xffe2bc50 ebp = 0xffe2bc78 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0x00000000 edi = 0xae635a10
[task 2024-11-22T10:24:32.019Z] Found by: call frame info
[task 2024-11-22T10:24:32.019Z] 5 libxul.so!nsLayoutUtils::IntrinsicForAxis(mozilla::PhysicalAxis, gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, int, mozilla::StyleSizeOverrides const&) [nsLayoutUtils.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 4804 + 0x25]
[task 2024-11-22T10:24:32.019Z] eip = 0xe77ec795 esp = 0xffe2bc80 ebp = 0xffe2bda8 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0xe791c1f0 edi = 0xae6359a8
[task 2024-11-22T10:24:32.019Z] Found by: call frame info
[task 2024-11-22T10:24:32.019Z] 6 libxul.so!nsLayoutUtils::IntrinsicForContainer(gfxContext*, nsIFrame*, mozilla::IntrinsicISizeType, mozilla::Maybe<mozilla::LogicalSize> const&, unsigned int, mozilla::StyleSizeOverrides const&) [nsLayoutUtils.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 4954 + 0x1b]
[task 2024-11-22T10:24:32.019Z] eip = 0xe77ee322 esp = 0xffe2bdb0 ebp = 0xffe2bde8 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0xae6359a8 edi = 0xffe2be5c
[task 2024-11-22T10:24:32.019Z] Found by: call frame info
[task 2024-11-22T10:24:32.019Z] 7 libxul.so!nsFlexContainerFrame::ComputeIntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) [nsFlexContainerFrame.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 6532 + 0x25]
[task 2024-11-22T10:24:32.019Z] eip = 0xe791be3d esp = 0xffe2bdf0 ebp = 0xffe2beb8 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0xae6359a8 edi = 0xffe2be5c
[task 2024-11-22T10:24:32.019Z] Found by: call frame info
[task 2024-11-22T10:24:32.019Z] 8 libxul.so!nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType)::$_0::operator()() const [nsFlexContainerFrame.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 6561]
[task 2024-11-22T10:24:32.019Z] Found by: inlining
[task 2024-11-22T10:24:32.019Z] 9 libxul.so!mozilla::IntrinsicISizesCache::GetOrSet<nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType)::$_0>(nsIFrame&, mozilla::IntrinsicISizeType, mozilla::IntrinsicSizeInput const&, nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType)::$_0) [IntrinsicISizesCache.h:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 37]
[task 2024-11-22T10:24:32.019Z] Found by: inlining
[task 2024-11-22T10:24:32.019Z] 10 libxul.so!nsFlexContainerFrame::IntrinsicISize(mozilla::IntrinsicSizeInput const&, mozilla::IntrinsicISizeType) [nsFlexContainerFrame.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 6560 + 0x3e]
[task 2024-11-22T10:24:32.019Z] eip = 0xe791c26d esp = 0xffe2bec0 ebp = 0xffe2bee8 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0x00000000 edi = 0xae635998
[task 2024-11-22T10:24:32.019Z] Found by: call frame info
[task 2024-11-22T10:24:32.019Z] 11 libxul.so!nsIFrame::GetMinISize(mozilla::IntrinsicSizeInput const&) [nsIFrame.h:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 2650]
[task 2024-11-22T10:24:32.019Z] Found by: inlining
[task 2024-11-22T10:24:32.019Z] 12 libxul.so!nsIFrame::ShrinkISizeToFit(mozilla::IntrinsicSizeInput const&, int, mozilla::EnumSet<mozilla::ComputeSizeFlag, unsigned char>) [nsIFrame.cpp:60b9a1ba2d2e318e3800cfecc5cb0191563e0b91 : 7002 + 0x25]
[task 2024-11-22T10:24:32.019Z] eip = 0xe7998a16 esp = 0xffe2bef0 ebp = 0xffe2bf18 ebx = 0xed4dcaf8
[task 2024-11-22T10:24:32.019Z] esi = 0xe791c1f0 edi = 0xeff0a100
[task 2024-11-22T10:24:32.019Z] Found by: call frame info
<...>
[task 2024-11-22T10:24:32.046Z] 0xf7cc9000 - 0xf7ce6fff libgcc_s.so.1 0.1.0.0
[task 2024-11-22T10:24:32.046Z] 0xf7ce7000 - 0xf7de8fff libm.so.6 0.0.0.0
[task 2024-11-22T10:24:32.046Z] 0xf7de9000 - 0xf7f6bfff libstdc++.so.6 0.6.0.0
[task 2024-11-22T10:24:32.046Z] 0xf7f6f000 - 0xf7f73fff libdl.so.2 0.0.0.0
[task 2024-11-22T10:24:32.046Z] 0xf7f76000 - 0xf7f8ffff libplc4.so 0.0.0.0
[task 2024-11-22T10:24:32.046Z] 0xf7f97000 - 0xf7f98fff linux-gate.so 0.0.0.0
[task 2024-11-22T10:24:32.046Z] 0xf7f99000 - 0xf7fc0fff ld-linux.so.2 0.0.0.0
[task 2024-11-22T10:24:32.046Z]
[task 2024-11-22T10:24:32.046Z] Unloaded modules:
[task 2024-11-22T10:24:32.046Z]
[task 2024-11-22T10:24:32.046Z] Unimplemented streams encountered:
[task 2024-11-22T10:24:32.046Z] Stream 0x47670006 LinuxCmdLine (Google Extension) @ 0x000ad2c0
[task 2024-11-22T10:24:32.046Z] Stream 0x47670008 LinuxAuxv (Google Extension) @ 0x000ade58
[task 2024-11-22T10:24:32.046Z] Stream 0x4767000a LinuxDsoDebug (Google Extension) @ 0x000c1f00
[task 2024-11-22T10:24:32.046Z]
[task 2024-11-22T10:24:32.046Z]
[task 2024-11-22T10:24:32.080Z] Creating default state directory: /builds/worker/.mozbuild
[task 2024-11-22T10:24:32.080Z] Creating local state directory: /builds/worker/.mozbuild/srcdirs/gecko-8a5b87fe5d69
[task 2024-11-22T10:24:32.129Z] cleanup
[task 2024-11-22T10:24:32.129Z] + cleanup
[task 2024-11-22T10:24:32.129Z] + local rv=11
[task 2024-11-22T10:24:32.129Z] + cleanup_xvfb
[task 2024-11-22T10:24:32.129Z] ++ pidof Xvfb
[task 2024-11-22T10:24:32.131Z] + local xvfb_pid=47
[task 2024-11-22T10:24:32.131Z] + local vnc=false
[task 2024-11-22T10:24:32.131Z] + local interactive=false
[task 2024-11-22T10:24:32.131Z] + '[' -n 47 ']'
[task 2024-11-22T10:24:32.131Z] + [[ false == false ]]
[task 2024-11-22T10:24:32.131Z] + [[ false == false ]]
[task 2024-11-22T10:24:32.131Z] + kill 47
[task 2024-11-22T10:24:32.131Z] + screen -XS xvfb quit
[task 2024-11-22T10:24:32.133Z] + exit 11
[taskcluster 2024-11-22 10:24:33.726Z] === Task Finished ===
[taskcluster 2024-11-22 10:24:34.843Z] Unsuccessful task run with exit code: 11 completed in 153.453 seconds
Comment 1•19 days ago
|
||
Set release status flags based on info from the regressing bug 1932683
status-firefox132:
--- → unaffected
status-firefox133:
--- → unaffected
status-firefox134:
--- → affected
status-firefox-esr128:
--- → unaffected
Comment 2•19 days ago
|
||
The patch from bug 1932683 only tweaked two numbers in front-end code for a tab groups which are currently disabled by default (except in a few explicit tab group tests). Seems rather unlikely that it caused this bug.
Flags: needinfo?(dao+bmo) → needinfo?(amarc)
Oh okay, sorry for the inconvenience, found the actual regressor.
Updated•19 days ago
|
Component: MFBT → Layout: Flexbox
Assignee | ||
Comment 4•19 days ago
|
||
I guess this is linux x86, right? We don't run tests there it seems? I thin
Flags: needinfo?(emilio)
Assignee | ||
Comment 5•19 days ago
|
||
We can't rely on the high pointer bit being unset there.
Updated•19 days ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Assignee | ||
Updated•19 days ago
|
Flags: needinfo?(emilio)
Flags: needinfo?(aethanyc)
Updated•19 days ago
|
Severity: -- → S2
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/be3510abd043
Fix IntrinsicISizesCache for 32-bit builds. r=dshin
Comment 8•18 days ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 18 days ago
Resolution: --- → FIXED
Target Milestone: --- → 134 Branch
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•