Bug 1932828 - Fix IntrinsicISizesCache for 32-bit builds. r=dshin

We can't rely on the high pointer bit being unset there.

Differential Revision: https://phabricator.services.mozilla.com/D229947